[gd_scene load_steps=20 format=3 uid="uid://c8kxuerbuqk7p"]

[ext_resource type="Script" uid="uid://3ei2cg6r7tpl" path="res://Scripts/LevelElements/goal_post.gd" id="1_dcuyc"]
[ext_resource type="Texture2D" uid="uid://c3ygc2w6kl7yi" path="res://Assets/Sprites/Objects/GoalPost.png" id="2_ug24x"]
[ext_resource type="Texture2D" uid="uid://b4nb7risid1nm" path="res://Assets/Sprites/Objects/GoalPostSlide.png" id="3_xsbyh"]
[ext_resource type="Texture2D" uid="uid://dt7qthdlkwsij" path="res://Assets/Sprites/Objects/GoalPostStars.png" id="5_vohdi"]
[ext_resource type="Script" uid="uid://bn5kyth8eyxbb" path="res://Scripts/LevelElements/achievement_unlocker.gd" id="6_417tm"]
[ext_resource type="Resource" uid="uid://6q8tf64pbkdi" path="res://Resources/Achievements/General/50StarFinish.tres" id="7_2i3uk"]

[sub_resource type="Animation" id="Animation_t36ye"]
resource_name = "Move"
length = 2.0
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:slider_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_kr20n"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../..:slider_value")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_2pxge"]
_data = {
&"Move": SubResource("Animation_t36ye"),
&"RESET": SubResource("Animation_kr20n")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_f1drg"]
size = Vector2(20, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_i51gc"]
size = Vector2(216, 3105)

[sub_resource type="Animation" id="Animation_43bwx"]
resource_name = "FadeOut"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("10:frame_coords:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1, 3]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("1:frame_coords:y")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_0aqne"]
resource_name = "Flash"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.54902, 0.54902, 1, 1), Color(1, 0, 0, 1), Color(0, 1, 0, 1), Color(0.419608, 0.419608, 0.352941, 1), Color(0.192157, 0.647059, 0.54902, 1), Color(1, 0.870588, 0.45098, 1), Color(0.772549, 0.772549, 0.772549, 1), Color(1, 1, 0, 1)]
}

[sub_resource type="Animation" id="Animation_2r6w0"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("10:frame_coords")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("10:frame_coords:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("1:frame_coords")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(2, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("1:frame_coords:y")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hah0j"]
_data = {
&"FadeOut": SubResource("Animation_43bwx"),
&"Flash": SubResource("Animation_0aqne"),
&"RESET": SubResource("Animation_2r6w0")
}

[sub_resource type="Animation" id="Animation_f32ij"]
resource_name = "Black"
length = 10.0

[sub_resource type="Animation" id="Animation_lr25f"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_05kwd"]
_data = {
&"Black": SubResource("Animation_f32ij"),
&"RESET": SubResource("Animation_lr25f")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n73vy"]
size = Vector2(480, 2191)

[node name="GoalPost" type="Node2D"]
script = ExtResource("1_dcuyc")

[node name="PostA" type="Sprite2D" parent="."]
z_as_relative = false
position = Vector2(16, -72)
texture = ExtResource("2_ug24x")
hframes = 4
frame = 1

[node name="PostB" type="Sprite2D" parent="PostA"]
show_behind_parent = true
z_index = -3
position = Vector2(-32, 0)
texture = ExtResource("2_ug24x")
hframes = 4

[node name="Slider" type="Sprite2D" parent="PostA"]
show_behind_parent = true
position = Vector2(-20, 64)
texture = ExtResource("3_xsbyh")

[node name="AnimationPlayer" type="AnimationPlayer" parent="PostA/Slider"]
libraries = {
&"": SubResource("AnimationLibrary_2pxge")
}
autoplay = "Move"

[node name="Hitbox" type="Area2D" parent="PostA/Slider"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PostA/Slider/Hitbox"]
shape = SubResource("RectangleShape2D_f1drg")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(116, -1551.5)
shape = SubResource("RectangleShape2D_i51gc")

[node name="Blackout" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
visibility_layer = 2048
z_index = -1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -656.0
offset_top = -544.0
offset_right = 1264.0
offset_bottom = 536.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Stars" type="Node2D" parent="CanvasLayer"]
visible = false
position = Vector2(224, 128)

[node name="10" type="Sprite2D" parent="CanvasLayer/Stars"]
texture = ExtResource("5_vohdi")
hframes = 10
vframes = 4

[node name="1" type="Sprite2D" parent="CanvasLayer/Stars"]
position = Vector2(32, 0)
texture = ExtResource("5_vohdi")
hframes = 10
vframes = 4
frame = 2

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Stars"]
libraries = {
&"": SubResource("AnimationLibrary_hah0j")
}
autoplay = "Flash"
speed_scale = 0.7

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer"]
libraries = {
&"": SubResource("AnimationLibrary_05kwd")
}

[node name="EnemyKillBox" type="Area2D" parent="."]
collision_mask = 65535

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyKillBox"]
position = Vector2(0, -1024.5)
shape = SubResource("RectangleShape2D_n73vy")

[node name="AchievementUnlocker" type="Node" parent="."]
script = ExtResource("6_417tm")
achievement = ExtResource("7_2i3uk")

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[connection signal="all_points" from="." to="AchievementUnlocker" method="unlock_achievement"]
[connection signal="area_entered" from="PostA/Slider/Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="EnemyKillBox" to="." method="_on_enemy_kill_box_area_entered"]
[connection signal="timeout" from="WaitTimer" to="." method="_on_wait_timer_timeout"]
